@@ -1,0 +1,6 @@
+AM_CFLAGS = -Wall -Werror
+AUTOMAKE_OPTIONS = no-dependencies
+noinst_PROGRAMS = example_test
+example_test_SOURCES = example_test.c
+example_test_CFLAGS = -I../headers
+example_test_LDADD = ../src/libstf.la
