@@ -1,3 +1,7 @@
 2008-03-09 Andrew De Ponte <cyphactor@gmail.com>
 
+* source:trunk/ (): Restructured the project and commented the API using doxygen style commenting and provided a Doxyfile to produce appropriate doxygen comments in the doc/dox/ directory when doxygen is run from within the projects root directory.
+
+2008-03-09 Andrew De Ponte <cyphactor@gmail.com>
+
 * source:trunk/ (): Initial project commit.
